Make sure code can be compiled with Java 8